<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SCREEN"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/SearchingArticle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:maxLength="9"
        android:inputType="number"
        style="@style/TEXT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/SearchFromTreeMap"
        style="@style/SearchFromTreeMapBUTTON"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:text="@string/SearchFromTreeMapButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/SearchingArticle"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/SearchingText"
        style="@style/TEXT"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:maxLength="20"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SearchingArticle" />

    <Button
        android:id="@+id/SearchByName"
        style="@style/SearchByNameBUTTON"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:text="@string/SearchByNameButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/SearchingText"
        app:layout_constraintTop_toBottomOf="@+id/SearchFromTreeMap" />

    <TextView
        android:id="@+id/InfoAboutTile"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        style="@style/TEXT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SearchingText" />

    <Spinner
        android:id="@+id/SelectedSpinner"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        style="@style/TEXT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SearchingText" />

    <TextView
        android:id="@+id/BoxVolume"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/BoxVolumeTextView"
        style="@style/TEXT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InfoAboutTile" />

    <EditText
        android:id="@+id/BoxSquare"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:maxLength="7"
        style="@style/TEXT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BoxVolume" />

    <TextView
        android:id="@+id/TileInBox"
        android:layout_width="130dp"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        android:text="@string/TileInBoxTextView"
        style="@style/TEXT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InfoAboutTile" />


    <EditText
        android:id="@+id/TilesInBox"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="3"
        style="@style/TEXT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TileInBox" />

    <TextView
        android:id="@+id/Square"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/SquareTextView"
        style="@style/TEXT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BoxSquare" />

    <EditText
        android:id="@+id/SearchingSquare"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:maxLength="9"
        style="@style/TEXT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Square" />

    <TextView
        android:id="@+id/RequiredPieces"
        android:layout_width="130dp"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        android:text="@string/RequiredPiecesTextView"
        style="@style/TEXT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TilesInBox" />

    <EditText
        android:id="@+id/SearchingTiles"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="9"
        style="@style/TEXT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RequiredPieces" />

    <Button
        android:id="@+id/CalculateByM"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        style="@style/CalculateByMBUTTON"
        android:text="@string/CalculateByMButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SearchingSquare" />

    <Button
        android:id="@+id/CalculateByPieces"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        style="@style/CalculateByPiecesBUTTON"
        android:text="@string/CalculateByPiecesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SearchingTiles" />

    <Button
        android:id="@+id/CalculateByPack"
        style="@style/CalculateByPackBUTTON"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/CalculateByPackButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CalculateByM" />

    <TextView
        android:id="@+id/TileSquare"
        style="@style/TEXT"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/TileSquareTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CalculateByPack" />

    <TextView
        android:id="@+id/Result"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        style="@style/TEXT"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TileSquare" />

    <TextView
        android:id="@+id/PackagingBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/PackagingBoxTextView"
        style="@style/TEXT"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Result" />

    <TextView
        android:id="@+id/BoxCount"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:text="0"
        android:textSize="34sp"
        style="@style/TEXT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PackagingBox" />

    <TextView
        android:id="@+id/PackInfo"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/PackInfoTextView"
        style="@style/TEXT"
        app:layout_constraintStart_toEndOf="@+id/BoxCount"
        app:layout_constraintTop_toBottomOf="@+id/PackagingBox" />

    <TextView
        android:id="@+id/TileCount"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:text="0"
        style="@style/TEXT"
        android:textAllCaps="false"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/PackInfo"
        app:layout_constraintTop_toBottomOf="@+id/PackagingBox" />

    <TextView
        android:id="@+id/TilesInfoName"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/TilesInfoNameTextView"
        style="@style/TEXT"
        app:layout_constraintStart_toEndOf="@+id/TileCount"
        app:layout_constraintTop_toBottomOf="@+id/PackagingBox" />

    <Button
        android:id="@+id/ShowHistory"
        style="@style/ShowHistoryBUTTON"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/ShowHistoryAndAddingButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BoxCount" />

    <Button
        android:id="@+id/ToDrawButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        style="@style/CalculateByPackBUTTON"
        android:text="@string/ToDrawButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TileCount" />
</androidx.constraintlayout.widget.ConstraintLayout>